<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                        http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>


	<!-- THE BASICS -->

	<!-- Maven Coordinates -->
	<groupId> degp.airtrafficcontrolapp </groupId>
	<artifactId> air-traffic-control-app </artifactId>
	<version> Teamwork2-Stage3-SNAPSHOT </version>
	<packaging>jar</packaging>


	<name>DEGP's Air Traffic Control App</name>
	<description>Air Traffic Control app with a GUI</description>
	<inceptionYear>2015</inceptionYear>
	<developers>
		<developer>
			<name>Daniel Gomes</name>
		</developer>
		<developer>
			<name>Eva Gomes</name>
		</developer>
		<developer>
			<name>Gonçalo Carvalho</name>
		</developer>
		<developer>
			<name>Pedro Antunes</name>
		</developer>
	</developers>
	<!-- <contributors></contributors> -->
	<!-- <mailingLists></mailingLists> -->


	<prerequisites>
		<maven>3.0.4</maven>
	</prerequisites>


	<!-- <modules></modules> -->


	<scm>
		<connection>https://github.com/Lucas-Andrade/Grupo-3-EHL/tree/AppForCommandLine3</connection>
		<url>https://github.com/Lucas-Andrade/Grupo-3-EHL/tree/AppForCommandLine3</url>
	</scm>
	<!-- <issueManagement></issueManagement> -->
	<!-- <ciManagement></ciManagement> -->
	<!-- <distributionManagement></distributionManagement> -->


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
		<sonar.exclusions>src/**/gui/**</sonar.exclusions>
	</properties>


	<!-- <dependencyManagement></dependencyManagement> -->
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
		</dependency>
	</dependencies>


	<!-- <repositories></repositories> -->
	<!-- <pluginRepositories></pluginRepositories> -->


	<build>
		<defaultGoal>clean package sonar:sonar</defaultGoal>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<excludes>
						<exclude>**/To_be_eliminated/**</exclude>
					</excludes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>main.java.cli.App</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.3.2</version>
				<executions>
					<execution>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<mainClass>main.java.cli.App</mainClass>
					<systemProperties>
						<systemProperty>
							<key>myproperty</key>
							<value>myvalue</value>
						</systemProperty>
					</systemProperties>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>2.5</version>
			</plugin>

			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-javadoc-plugin</artifactId> 
				<version>2.10.1</version> <configuration> <show>private</show> <nohelp>true</nohelp> 
				</configuration> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
				<artifactId>maven-javadoc-plugin</artifactId> <version>2.10.1</version> <executions> 
				<execution> <id>attach-javadocs</id> <goals> <goal>jar</goal> </goals> <phase>package</phase> 
				</execution> </executions> <configuration> <debug>true</debug> <minmemory>128m</minmemory> 
				<maxmemory>1g</maxmemory> <source>${java.version}</source> <target>${java.version}</target> 
				<jarOutputDirectory>${basedir}/javadoc</jarOutputDirectory> <outputDirectory>${basedir}/javadoc</outputDirectory> 
				<reportOutputDirectory>${basedir}/javadoc</reportOutputDirectory> <destDir>javadoc</destDir> 
				<additionalparam>-Xdoclint:none</additionalparam> <groups> <group> <title>Group 
				Packages</title> <packages>src/main/java</packages> <packages>src/main.java:src/main.java.commands</packages> 
				</group> </groups> </configuration> </plugin> -->

		</plugins>

	</build>


	<!-- <reporting></reporting> -->


</project>


<!-- WEBLIOGRAPHY -->
<!-- POM elements here: http://maven.apache.org/pom.html -->
<!-- POM order conventions here: http://maven.apache.org/developers/conventions/code.html -->